fix: changing portfolio project links

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               </p>
               <div class="project-links">
                 <a
-                  href="https://github.com/Theyvison/ignite-timer"
+                  href="https://github.com/Theyvison/portfolio"
                   class="text-sm"
                   target="_blank"
                 >
@@ -138,7 +138,7 @@
                   Repositório
                 </a>
                 <a
-                  href="https://ignite-timer-ten-omega.vercel.app/"
+                  href="https://portfolio-theyvisons-projects.vercel.app/"
                   class="text-sm"
                   target="_blank"
                 >
