fix: misspelling 'portfolio' (maybe I don't know portuguese 🤡)

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
             <div class="project">
               <img src="./assets/images/portfolio.png" alt="" />
-              <h3 class="title-sm">Meu portfolio</h3>
+              <h3 class="title-sm">Meu portfólio</h3>
               <p class="text-sm">
-                Esse site que está vendo é o meu portfolio, desenvolvido com
+                Esse site que está vendo é o meu portfólio, desenvolvido com
                 HTML, CSS e Javascript, feito para mostrar um pouco do meu
                 trabalho e conhecimento.
               </p>
