fix: some changes

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             </h1>
             <h2 class="title-lg" id="intro-title">Desenvolvedor Web</h1>
             <p class="text-md" id="intro-text">
-              Atualmente bacharelando em Sistemas de Informação, tenho
-              conhecimento em desenvolvimento web. Iniciei minha jornada na
-              programação estudando Python e, pouco tempo depois, conheci o
-              mundo do front-end. Desde então, venho aprimorando minhas
-              habilidades, explorando HTML, CSS, JavaScript, React.js, entre
-              outras tecnologias.<br /><br />
-              Também possuo alguma experiência em back-end, com Node.js, Express
-              e Fastify, além de bancos de dados como MySQL e PostgreSQL.<br /><br />
-              Estou sempre em busca de aprender novas ferramentas e aprimorar
-              minhas habilidades.
+              <span>Atualmente bacharelando em Sistemas de Informação, tenho
+                conhecimento em desenvolvimento web. Iniciei minha jornada na
+                programação estudando Python e, pouco tempo depois, conheci o
+                mundo do front-end. Desde então, venho aprimorando minhas
+                habilidades, explorando HTML, CSS, JavaScript, React.js, entre
+                outras tecnologias.</span><br /><br />
+              <span>Também possuo alguma experiência em back-end, com Node.js, Express
+                e Fastify, além de bancos de dados como MySQL e PostgreSQL.</span><br /><br />
+              <span>Estou sempre em busca de aprender novas ferramentas e aprimorar
+                minhas habilidades.</span>
             </p>
             <div class="tags">
               <div class="tag">
@@ -91,37 +91,39 @@
             <h2 class="title-md" id="projects-subtitle">Veja meus projetos em destaque</h2>
           </div>
           <div class="projects-grid">
-            <div class="project">
-              <img
-                src="./assets/images/beautysalon.png"
-                alt="Imagem do projeto beautysalon"
-              />
-              <h3 class="title-md">beautisalon</h3>
-              <p class="text-md">
-                Uma landing page de um salão de beleza, desenvolvida com HTML,
-                CSS e Javascript durante a NLW 6 da rocketseat.
-              </p>
-              <div class="project-links">
-                <a
-                  href="https://github.com/Theyvison/NLW-6-Origin"
-                  class="text-md"
-                  target="_blank"
-                >
-                  <i class="fa-brands fa-github"></i>
-                  Repositório
-                </a>
-                <a
-                  href="https://theyvison.github.io/NLW-6-Origin/"
-                  class="text-md"
-                  target="_blank"
-                >
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                  Site
-                </a>
+            <div class="project-wrapper">
+              <div class="project">
+                <img
+                  src="./assets/images/beautysalon.png"
+                  alt="Imagem do projeto beautysalon"
+                />
+                <h3 class="title-md">beautisalon</h3>
+                <p class="text-md">
+                  Uma landing page de um salão de beleza, desenvolvida com HTML,
+                  CSS e Javascript durante a NLW 6 da rocketseat.
+                </p>
+                <div class="project-links">
+                  <a
+                    href="https://github.com/Theyvison/NLW-6-Origin"
+                    class="text-md"
+                    target="_blank"
+                  >
+                    <i class="fa-brands fa-github"></i>
+                    Repositório
+                  </a>
+                  <a
+                    href="https://theyvison.github.io/NLW-6-Origin/"
+                    class="text-md"
+                    target="_blank"
+                  >
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    Site
+                  </a>
+                </div>
               </div>
             </div>
 
-            <div class="project">
+            <div class="project-wrapper"><div class="project">
               <img
                 src="./assets/images/portfolio.png"
                 alt="Imagem do projeto portfolio"
@@ -150,9 +152,8 @@
                   Site
                 </a>
               </div>
-            </div>
-
-            <div class="project">
+            </div></div>
+            <div class="project-wrapper"><div class="project">
               <img
                 src="./assets/images/ignite-timer.png"
                 alt="Imagem do projeto ignite timer"
@@ -180,7 +181,9 @@
                   Site
                 </a>
               </div>
-            </div>
+            </div></div>
+
+            
           </div>
         </div>
       </section>
